# py-uv-fastapi-raw-template

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  routes.py  schemas.py
